# filo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  build-deb.sh  pyproject.toml  session-ses_1cf2.md
.github/workflows/: ci.yml  release.yml
demo/: create_metadata_test_files.py  create_polyglot_files.py  create_test_files.py  test_all_features.py
docs/: CHANGELOG.md  CRYPTO_DETECTION.md  METADATA_EXTRACTION.md
examples/: advanced_repair_demo.py  benchmark.py  carving_demo.py  confidence_breakdown_demo.py  contradiction_demo.py  corrupted_file_demo.py  embedded_demo.py  features_demo.py  polyglot_examples.py  test_new_formats.py  usage_examples.py
filo/: __init__.py  analyzer.py  architecture.py  batch.py  carver.py  cli.py  container.py  contradictions.py  crypto.py  embedded.py  export.py  fingerprint.py  formats.py  lineage.py  metadata.py  ml.py  models.py  office.py  pcap.py  polyglot.py  profiler.py  repair.py  stego.py  yarascanner.py
filo/formats/: boot.yaml  bson.yaml  der.yaml  eml.yaml  evt.yaml  evtx.yaml  gpt.yaml  jks.yaml  lnk.yaml  luks.yaml  mft.yaml  minidump.yaml  msg.yaml  msgpack.yaml  msi.yaml  ole2.yaml  pcapng.yaml  pem.yaml  pkcs12.yaml  sqlite.yaml  vdi.yaml  vhd.yaml
packaging/DEBIAN/: control
tests/: conftest.py  test_advanced_repair.py  test_analyzer.py  test_architecture.py  test_batch.py  test_carver.py  test_confidence_breakdown.py  test_container.py  test_contradictions.py  test_crypto.py  test_embedded.py  test_export.py  test_formats.py  test_integration.py  test_lineage.py  test_metadata.py  test_ml.py  test_office.py  test_polyglot.py  test_profiler.py  test_repair.py  test_strings.py  test_yarascanner.py
