[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filo-forensics"
version = "0.3.0"
description = "Forensic Intelligence & Ligation Orchestrator - Battle-tested file forensics platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Supun Hewagamage", email = "supunhg@users.noreply.github.com"}
]
keywords = ["forensics", "file-analysis", "ctf", "carving", "repair"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
yara = ["yara-python>=4.0.0"]
all = ["filo-forensics[yara]"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
filo = "filo.cli:main"

[project.urls]
Homepage = "https://github.com/supunhg/Filo"
Repository = "https://github.com/supunhg/Filo"

[tool.setuptools.packages.find]
where = ["."]
include = ["filo*"]

[tool.setuptools.package-data]
filo = ["formats/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["examples/", "demo/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
